<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.paaltao.activity.ProductDetailsActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="5dp"
                card_view:cardUseCompatPadding="true"

                >

                <com.daimajia.slider.library.SliderLayout
                    android:id="@+id/slider"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_alignParentRight="true"
                    android:scaleType="centerCrop" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/product_title_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="14dp"
                        android:text="@string/product_detail_title"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/product_price"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.9"
                            android:gravity="center_vertical"
                            android:padding="16dp"
                            android:text="@string/Rs" />

                        <Button
                            android:id="@+id/ask_question"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:layout_weight="0.1"
                            android:background="#BBDEFB"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/ask_question"
                            android:textColor="@color/black" />
                    </LinearLayout>


                </LinearLayout>


            </android.support.v7.widget.CardView>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp">

                <Button
                    android:id="@+id/add_cart_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="6dp"
                    android:background="@color/lightGreen"
                    android:fontFamily="sans-light"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/add_cart"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp">

                </Button>
            </RelativeLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="10dp"
                card_view:cardCornerRadius="5dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/item_details_title"
                        style="@style/product_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/item_details_title" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/item_details_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="12dp"
                        android:text="@string/item_details"
                        android:textColor="@color/material_blue_grey_950"
                        android:visibility="gone" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        style="@style/product_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/product_reviews_title" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/reviews_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="12dp"
                        android:text="@string/item_details"
                        android:textColor="@color/material_blue_grey_950"
                        android:visibility="gone" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        style="@style/product_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/shipping_title" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="12dp"
                        android:text="@string/item_details"
                        android:textColor="@color/material_blue_grey_950"
                        android:visibility="gone" />


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="5dp"
                android:layout_margin="5dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_launcher"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="12dp"
                        android:contentDescription="@string/shop_thumbnail" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/shop_name"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:gravity="center_horizontal"
                        android:layout_marginBottom="12dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textAlignment="gravity"
                        android:text="This shop contains vintage collections and personalized crafted products. This shop portrays the true dedication and the splendid tribal art persisting in rural Bengal."
                        android:fontFamily="sans-serif-light"
                        android:textSize="16sp"
                        android:layout_marginBottom="12dp"/>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="Visit Shop"
                        android:textColor="@color/teal"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:padding="10dp"/>


                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="10dp"
                card_view:cardCornerRadius="5dp"
                card_view:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/listed_on"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:padding="12dp"
                        android:text="@string/listed_on" />

                    <TextView
                        android:id="@+id/listing_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:padding="12dp"
                        android:text="@string/listing_number" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>

    </ScrollView>


</RelativeLayout>
